# LGX

./: .gitignore  README.md  benchmark.py  dataset.json  dataset_final_lnrs.json  dataset_graph.json  generate_benchmark_table.py  main.py  pyproject.toml  run_benchmark.py
applications/G/: llmasp-via-lgx-base.yml  llmasp-via-lgx-guard.yml
applications/LNRS/: llmasp-via-lgx-base.yml  llmasp-via-lgx-guard.yml
behaviour/: behaviour.lgx.yml
benchmark/behaviours/: behaviour_v3.yml
datasets/: dataset_filter.py  dataset_graph.json
experiment_results/gpt-oss_120b/: graph_lgx_base_cache_adv.json  graph_lgx_base_cache_non_monotone.json  graph_lgx_base_no_cache.json  graph_llmasp_base.json  graph_llmasp_g.json  lnrs_lgx_base_cache_adv.json  lnrs_lgx_base_cache_non_monotone.json  lnrs_lgx_base_no_cache.json  lnrs_llmasp_base.json  lnrs_llmasp_g.json
experiment_results/llama3.1_70b/: graph_lgx_base_cache_adv.json  graph_lgx_base_cache_non_monotone.json  graph_lgx_base_no_cache.json  graph_llmasp_base.json  graph_llmasp_g.json  lnrs_lgx_base_cache_adv.json  lnrs_lgx_base_cache_non_monotone.json  lnrs_lgx_base_no_cache.json  lnrs_llmasp_base.json  lnrs_llmasp_g.json
experiment_results/llama3.1_8b/: graph_lgx_base_cache_adv.json  graph_lgx_base_cache_non_monotone.json  graph_lgx_base_no_cache.json  graph_llmasp_g.json  (+6 more)
src/: config.py  lgx.py  llmasp.py
tests/: conftest.py  test_atoms.py  test_cache.py  test_config.py  test_core.py  test_filter_atoms.py  test_handler.py  test_knowledge_base.py  test_lgx.py  test_predicate.py  test_prompt_database.py  test_yaml_parser.py
(+31 files in other folders)
